--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 antlr4-python3-runtime==4.8
+boto3==1.18.31
+botocore==1.21.31
 hydra-core==1.1.1
 importlib-resources==5.2.2
+jmespath==0.10.0
 omegaconf==2.1.1
+python-dateutil==2.8.2
+python-dotenv==0.19.0
 PyYAML==5.4.1
+s3transfer==0.5.0
+six==1.16.0
 toml==0.10.2
+urllib3==1.26.6
 zipp==3.5.0
