--- a/config/ec2/instance_definitions/sandbox.yaml
+++ b/config/ec2/instance_definitions/sandbox.yaml
@@ -11,7 +11,7 @@ terraform_config:
 tfvars_config:
   instance_name: "sandbox_${build.environment}"
   tags:
-    tag_name: "sandbox"
+    tag_identifier: "sandbox"
 
   security_group:
     sg_name: "sandbox_sg"
