work on providers

--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -1,18 +1,19 @@
 # Order is important py-tfvars will create infra in specified order specified in defaults object
 defaults:
-  - aws/shared@shared.vpc: vpc/vpc_base
-  - aws/shared@shared.key_pairs: key_pairs/key_pair_base
-  - aws/shared@shared.security_groups: security_groups/sg_definitions/igc_sg_definitions
-  - aws/middleware/ec2@application.ec2.instances: instance_definitions/igc_instances
+  - aws/shared@aws.shared.vpc: vpc/vpc_base
+  - aws/shared@aws.shared.key_pairs: key_pairs/key_pair_base
+  - aws/shared@aws.shared.security_groups: security_groups/sg_definitions/igc_sg_definitions
+  - aws/middleware/ec2@aws.application.ec2.instances: instance_definitions/igc_instances
 #  - aws/middleware/ec2@middleware.ec2.servicetier: instance_definitions/servicetier
 #  - aws/middleware/ec2@middleware.ec2.enginetier: instance_definitions/enginetier
 #  - connectivity: connectivity_base
 
 # Provider overrides
-common:
-  vpc:
-    providers:
-      default_provider: "terraform"
+aws:
+  shared:
+    vpc:
+      providers:
+        default_provider: "terraform"
 
 
 build:
