--- a/config/aws/middleware/ec2/instance_definitions/igc_instances.yaml
+++ b/config/aws/middleware/ec2/instance_definitions/igc_instances.yaml
@@ -3,3 +3,5 @@ config:
     instance_count              : 1
     instance_type               : "t3a.micro"
     instance_name               : "ServiceTier"
+
+  enginetier_instance:
