--- a/config/aws/shared/security_groups/sg_base.yaml
+++ b/config/aws/shared/security_groups/sg_base.yaml
@@ -1,15 +1,14 @@
-config:
-  security_groups:
-    default_sg:
-      sg_name: ???
-      sg_description: ???
-      ingress_cidr_blocks: [ "109.152.3.140/32" ]
-      ingress_rules: [ "all-all" ]
-      egress_cidr_blocks: [ "0.0.0.0/0" ]
-      egress_rules: ["all-all" ]
-      tags:
-        Name: ???
-        Owner: "Hunter-Labs"
+configs:
+  default_sg:
+    sg_name: ???
+    sg_description: ???
+    ingress_cidr_blocks: [ "109.152.3.140/32" ]
+    ingress_rules: [ "all-all" ]
+    egress_cidr_blocks: [ "0.0.0.0/0" ]
+    egress_rules: ["all-all" ]
+    tags:
+      Name: ???
+      Owner: "Hunter-Labs"
 
 providers:
   # Set the provider that will create the infrastructure
@@ -18,7 +17,7 @@ providers:
   # Atlas does not support direct creation of SGs
   atlas:
 
-  terraform:
+  TerraGen:
       s3_backend_key: "common/security_groups/terraform.tfstate"
       tfvars_file:
         path: "C:/dev/python/terravarmer/tfvars"
