--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 antlr4-python3-runtime==4.8
+atomicwrites==1.4.0
+attrs==21.2.0
 boto3==1.18.31
 botocore==1.21.31
+colorama==0.4.4
 hydra-core==1.1.1
 importlib-resources==5.2.2
+iniconfig==1.1.1
 jmespath==0.10.0
 omegaconf==2.1.1
+packaging==21.0
+pluggy==1.0.0
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.5
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 PyYAML==5.4.1
