--- a/config/aws/shared/vpc/vpc_base.yaml
+++ b/config/aws/shared/vpc/vpc_base.yaml
@@ -1,14 +1,13 @@
 # Define multiple configurations in the configs section, as long as they match the default pattern
-configs:
-  default_vpc:
-    vpc_name             : "hunter-labs-vpc"
-    cidr                 : "10.0.0.0/16"
-    azs                  : ["us-east-1a", "us-east-1b"]
-    public_subnets       : ["10.0.100.0/24", "10.0.200.0/24"]
-    enable_dns_hostnames : true
+config:
+  vpc_name             : "hunter-labs-vpc"
+  cidr                 : "10.0.0.0/16"
+  azs                  : ["us-east-1a", "us-east-1b"]
+  public_subnets       : ["10.0.100.0/24", "10.0.200.0/24"]
+  enable_dns_hostnames : false
 
-    tags:
-      tag_environment : ${build.environment}
+  tags:
+    tag_environment : ${build.environment}
 
 # provider specific config can be added here
 providers:
