--- a/config/aws/shared/security_groups/sg_base.yaml
+++ b/config/aws/shared/security_groups/sg_base.yaml
@@ -1,14 +1,13 @@
-configs:
-  default_sg:
-    sg_name: ???
-    sg_description: ???
-    ingress_cidr_blocks: [ "109.152.3.140/32" ]
-    ingress_rules: [ "all-all" ]
-    egress_cidr_blocks: [ "0.0.0.0/0" ]
-    egress_rules: ["all-all" ]
-    tags:
-      Name: ???
-      Owner: "Hunter-Labs"
+config:
+  sg_name: ???
+  sg_description: ???
+  ingress_cidr_blocks: [ "109.152.3.140/32" ]
+  ingress_rules: [ "all-all" ]
+  egress_cidr_blocks: [ "0.0.0.0/0" ]
+  egress_rules: ["all-all" ]
+  tags:
+    Name: ???
+    Owner: "Hunter-Labs"
 
 providers:
   # Set the provider that will create the infrastructure
