--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -1,12 +1,16 @@
 # Order is important py-tfvars will create infra in specified order specified in defaults object
 defaults:
+  # Shared Infrastructure
   - aws/shared/vpc@aws.shared.vpc.simple_vpc: vpc_definitions/simple_vpc
   - aws/shared/key_pairs@aws.shared.key_pairs.hunter_labs_key: key_pair_definitions/hunter_labs_key
-  - aws/shared/security_groups@aws.shared.security_groups.enginetier: datagovernance/dgv_enginetier
-#  - aws/middleware/ec2@aws.application.ec2.instances: instance_definitions/igc_instances
+  - aws/shared/security_groups@aws.shared.security_groups.enginetier: data_governance/dgv_enginetier
+
+  # Application/Project specific Infrastructure
+  - aws/middleware/ec2@aws.application.ec2.instances.enginetier: data_governance/enginetier
 #  - aws/middleware/ec2@middleware.ec2.servicetier: instance_definitions/servicetier
 #  - aws/middleware/ec2@middleware.ec2.enginetier: instance_definitions/enginetier
 #  - connectivity: connectivity_base
+
 
 # Provider overrides
 #aws:
@@ -14,6 +18,7 @@ defaults:
 #    vpc:
 #      providers:
 #        default_provider: "terraform"
+
 
 
 build:
