--- a/config/aws/shared/key_pairs/key_pair_base.yaml
+++ b/config/aws/shared/key_pairs/key_pair_base.yaml
@@ -11,5 +11,6 @@ providers:
   atlas:
 
   TerraGen:
+      module_path: "C:/dev/python/terravarmer/providers/aws/terragen/outputs"
       s3_backend_key: "common/key_pairs/terraform.tfstate"
 
