--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,6 @@
 antlr4-python3-runtime==4.8
-atomicwrites==1.4.0
-attrs==21.2.0
-boto3==1.18.31
-botocore==1.21.31
-colorama==0.4.4
 hydra-core==1.1.1
-importlib-resources==5.2.2
-iniconfig==1.1.1
-jmespath==0.10.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 omegaconf==2.1.1
-packaging==21.0
-pluggy==1.0.0
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.5
-python-dateutil==2.8.2
-python-dotenv==0.19.0
 PyYAML==5.4.1
-s3transfer==0.5.0
-six==1.16.0
-toml==0.10.2
-urllib3==1.26.6
-zipp==3.5.0
