--- a/config/aws/shared/vpcs/vpc_base.yaml
+++ b/config/aws/shared/vpcs/vpc_base.yaml
@@ -31,4 +31,5 @@ providers:
 
       # Variables you want to add to outputs.tf file should be specified here
       outputs:
-
+        vpc_id:
+          description: "The VPC ID"
