--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -2,7 +2,7 @@
 defaults:
   # Shared Infrastructure
   - aws/shared/vpcs@shared.vpc.simple_vpc: vpc_definitions/simple_vpc
-#  - aws/shared/key_pairs@shared.hunter_labs_key: key_pair_definitions/hunter_labs_key
+  - aws/shared/key_pairs@shared.key_pairs.hunter_labs_key: key_pair_definitions/hunter_labs_key
 #  - aws/shared/security_groups@aws.shared.security_groups.enginetier: data_governance/dgv_enginetier
 
   # Application/Project specific Infrastructure
