--- a/config/aws/shared/key_pairs/key_pair_base.yaml
+++ b/config/aws/shared/key_pairs/key_pair_base.yaml
@@ -12,5 +12,6 @@ providers:
 
   TerraGen:
       module_path: "C:/dev/python/terravarmer/providers/aws/terragen/outputs/key_pairs"
-      s3_backend_key: "common/key_pairs/terraform.tfstate"
+      s3_backend_root: "shared/key_pairs"
+      resource_type: "aws_key_pair"
 
