--- a/config/aws/shared/vpcs/vpc_base.yaml
+++ b/config/aws/shared/vpcs/vpc_base.yaml
@@ -1,6 +1,6 @@
 # Define multiple configurations in the configs section, as long as they match the default pattern
 config:
-  vpc_name             : "hunter-labs-vpc"
+  name                 : "hunter-labs-vpc"
   cidr                 : "10.0.0.0/16"
   azs                  : ["us-east-1a", "us-east-1b"]
   public_subnets       : ["10.0.100.0/24", "10.0.200.0/24"]
