--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -33,12 +33,14 @@ build:
         run_terraform: False      # Set to true for Terraform to apply created modules
         terraform_mode: "plan"    # Must be one of create|destroy|plan
 
-        aws_provider_config:
+        provider_config:
+          terraform_provider: "AWS"
           region: "us-east-1"             # The region we will deploy infrastructure to
           profile: "hunter-ops-tfstate"   # The AWS profile used to deploy the infrastructure
 
         # Partial config for Terraform Backend see https://www.terraform.io/docs/language/settings/backends/configuration.html#partial-configuration
-        aws_backend_config:
+        backend_config:
+          terraform_backend: "S3"
           region: "us-east-1"
           profile: "hunter_ops_prod"
           bucket: "hunter-ops-tfstate"
