--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -22,7 +22,7 @@ build:
   debug: True                   # Set to True to enable verbose debugging
   default_provider: "TerraGen"  # Provider used to create all infra unless overridden
   environment: "prod"           # Deployment environment must be one of dev|test|ppe|prod
-  shared_infra: "destroy"         # Must be one of create|destroy
+  shared_infra: "create"         # Must be one of create|destroy
 
   # Register providers here, required provider_name, and provider_location further provider specific
   # config can be added as needed
@@ -32,7 +32,7 @@ build:
 
       properties:
         run_terraform: False      # Set to true for Terraform to apply created modules
-        terraform_mode: "plan"    # Must be one of create|destroy|plan
+        terraform_plan: True    # Set to true to see plan output rather than create or destroy infra
 
         provider_config:
           terraform_provider: "AWS"
