--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -31,6 +31,8 @@ build:
       module_location: "providers.aws.terragen.terragen_provider"
 
       properties:
+        terraform_mode: "plan"  # Must be one of plan|apply - Plan produces terraform plan only, apply will create or destroy infra
+
         run_terraform: False      # Set to true for Terraform to apply created modules
         terraform_plan: True    # Set to true to see plan output rather than create or destroy infra
 
