--- a/config/aws/shared/key_pairs/key_pair_base.yaml
+++ b/config/aws/shared/key_pairs/key_pair_base.yaml
@@ -1,6 +1,11 @@
 config:
-    key_name: ???
-    public_key: ???
+  key_name: ???
+  public_key: ???
+
+outputs:
+  key_name:
+    description: "The name of the key"
+    data_block: "key_pair.outputs.key_name"  # How the value is looked up in a data block
 
 # provider specific config can be added here
 providers:
@@ -13,4 +18,7 @@ providers:
   TerraGen:
       s3_backend_root: "shared/key_pairs"
       resource_type: "aws_key_pair"
+
+    # Variables you want to add to outputs.tf file should be specified here
+
 
