--- a/config/aws/shared/vpcs/vpc_definitions/simple_vpc.yaml
+++ b/config/aws/shared/vpcs/vpc_definitions/simple_vpc.yaml
@@ -5,8 +5,8 @@ config:
   name: "hunter-labs-vpc"
   enable_dns_hostnames : true
 
-providers:
-  TerraGen:
-    outputs:
-      public_subnets:
-        description: "Public subnet ids"
+#providers:
+#  TerraGen:
+#    outputs:
+#      public_subnets:
+#        description: "Public subnet ids"
