--- a/config/atlas.yaml
+++ b/config/atlas.yaml
@@ -5,7 +5,8 @@ defaults:
   - aws/shared/key_pairs@shared.key_pairs.hunter_labs_key: key_pair_definitions/hunter_labs_key
 
   # Application specific Infrastructure
-  - aws/app/security_groups@app.security_groups.local_access: sg_definitions/local_access
+  - aws/apps/sandbox/security_groups@app.security_groups.local_access: local_access
+#  - aws/app/security_groups@app.security_groups.local_access: sg_definitions/local_access
 #  - aws/middleware/ec2@aws.application.ec2.instances.enginetier: data_governance/enginetier
 #  - aws/middleware/ec2@middleware.ec2.servicetier: instance_definitions/servicetier
 #  - aws/middleware/ec2@middleware.ec2.enginetier: instance_definitions/enginetier
