rework config again

--- a/config/aws/apps/sandbox/security_groups/local_access.yaml
+++ b/config/aws/apps/sandbox/security_groups/local_access.yaml
@@ -1,15 +1,13 @@
 defaults:
   - /aws/base/security_groups@: sg_base
 
-lookups:
-  vpc:
-    name: "${shared.vpc.simple_vpc.module.name}"
-    outputs:
-      vpc_id: "${shared.vpc.simple_vpc.outputs.vpc_id.name}"
+#lookups:
+#  vpc_id: "${shared.vpc.simple_vpc.module.lookup}.${shared.vpc.simple_vpc.outputs.vpc_id.lookup}"
+
 
 config:
     name: "LocalAccessSG"
     description: "Access Instances from my local machine"
-    vpc_id: "lookup:${shared.vpc.simple_vpc.module.type}/${shared.vpc.simple_vpc.module.type}"
+    vpc_id: "lookup: ${shared.vpc.simple_vpc.outputs.vpc_id.lookup}"
     tags:
       Name: "LocalAccessSG"
